--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
-# Default ignored files
-/shelf/
-/workspace.xml
-# Editor-based HTTP Client requests
-/httpRequests/
-# Datasource local storage ignored files
-/dataSources/
-/dataSources.local.xml
+# dependencies
+node_modules/
+
+# environment files
+.env
+
+# logs
+npm-debug.log
+yarn-debug.log
+yarn-error.log
+
+# system files
+.DS_Store
