--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,20 @@
-# dependencies
-node_modules/
+# ===== JetBrains IDE files =====
+/shelf/
+/workspace.xml
+/httpRequests/
+/dataSources/
+/dataSources.local.xml
+/.idea/
 
-# environment files
+# ===== Node.js =====
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# ===== Environment variables =====
 .env
 
-# logs
-npm-debug.log
-yarn-debug.log
-yarn-error.log
-
-# system files
+# ===== System files =====
 .DS_Store
+Thumbs.db
