--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "test": "jest"
+    "test": "NODE_ENV=test jest --runInBand --detectOpenHandles"
+
   },
   "keywords": [],
   "author": "",
