--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "test": "NODE_ENV=test jest --runInBand --detectOpenHandles"
-
+    "test": "cross-env NODE_ENV=test jest --runInBand --detectOpenHandles"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +22,7 @@
     "mongoose": "^8.18.1"
   },
   "devDependencies": {
+    "cross-env": "^10.1.0",
     "jest": "^30.1.3",
     "supertest": "^7.1.4"
   }
